# coursework

./: README.md  pyproject.toml  results.txt
src/: main.py  utils.py  сategory.py
tests/: conftest.py  test_product_category.py
