[tool.poetry]
name = "coursework-1"
version = "0.1.0"
description = ""
authors = ["a0000 <esaulovegor50gmail@.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Конфигурация для black
[tool.black]
line-length = 119
exclude = '''
/\.git
'''

# Конфигурация для isort
[tool.isort]
profile = "black"
line_length = 119

# Конфигурация для mypy
[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"


